--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "main": "dist/main.js",
   "version": "0.0.0",
   "devDependencies": {
-    "@types/universal-cookie": "git+ssh://git@github.com:S64/types-universal-cookie.git#v2.1.2-2",
+    "@aspnet/signalr-client": "^1.0.0-alpha2-final",
     "@types/history": "4.6.0",
     "@types/jquery": "^1.10.34",
     "@types/react": "15.0.35",
+    "@types/universal-cookie": "",
     "@types/react-dom": "15.5.1",
     "@types/react-hot-loader": "3.0.3",
     "@types/react-router": "4.0.12",
@@ -25,17 +26,15 @@
     "jquery": "3.3.0",
     "json-loader": "0.5.4",
     "react": "15.6.1",
+    "react-cookie": "2.1.0",
     "react-dom": "15.6.1",
     "react-hot-loader": "3.0.0-beta.7",
     "react-router-dom": "4.1.1",
     "style-loader": "0.18.2",
     "typescript": "2.4.1",
+    "universal-cookie": "^2.1.2",
     "url-loader": "0.5.9",
     "webpack": "2.5.1",
-    "webpack-hot-middleware": "2.18.2",
-    "react-cookie": "2.1.0"
-  },
-  "dependencies": {
-    "universal-cookie": "2.0.0"
+    "webpack-hot-middleware": "2.18.2"
   }
 }
